default/objects/Partners__c/Partners__c.object-meta.xml
<CustomObject>
    <label>Partners</label>
    <nameField>
        <label>Partners Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>