default/objects/Partners__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>{{Parent customer Code}}-{{Partner Customer Code}}-{{Partner Type}}</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>45</length>
    <type>Text</type>
</CustomField>