default/objects/Partners__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partners (Partner Account)</relationshipLabel>
    <relationshipName>Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>